Revision history for XML-Grammar-Fiction.

v0.14.7     2013-07-15
    * Skip compiling the scripts with extra dependencies.

v0.14.6     2013-05-14
    * Minimal version of perl is now 5.14.x.
        - to avoid test failures like:
        - http://www.cpantesters.org/cpan/report/1cf5be2e-bc06-11e2-8c80-50d7c5c10595

v0.14.5     2013-05-09
    * Increase dependency of XML::GrammarBase to 0.2.2.
        - For a better minimal version of libxml2 to avoid test failures.

v0.14.4     2013-05-01
    * Got rid of trailing space in comments with newlines.
        - Apparently XML::Writer appends surrounding spaces to the comments
        being output, and if the comment starts or ends with a newline,
        then it's a problem.
        - Checking in a test in:
            - t/screenplay/proto-text-to-xml-using-custom-parser.t


v0.14.3     2013-04-30
    * Convert 'Changes' (this file) to CPAN::Changes.
        - Add a test in dist.ini.

v0.14.2      2013-04-30
    * Tweak dist.in to have proper runtime dependencies.
        - Thanks to leont on irc.perl.org .
    * Remove the Makefile.PL from the target distribution.
        - it did not handle dependencies well.
        - thanks to ether and kentnl on irc.perl.org .

v0.14.1      2013-04-29
    * Moved unused to rejects:
        - lib/XML/Grammar/Fiction/RNG_Renderer.pm
        - lib/XML/Grammar/Screenplay/XSLT/Base.pm
    * Made Test::XML::Ordered a test phase requires in dist.ini.
        - so it will be mentioned only once.

v0.14.0      2013-04-28
    * Update the glob in inc/Test/Run/Builder.pm .
        - include t/screenplay/*.t and t/fiction/*.t .
    * lib/XML/Grammar/FictionBase/XSLT/Converter.pm
        - Refactoring: _data_dir now initialized from default => sub { ... }.
        - Refactoring: _rng now initialized from default => sub { ... }.
    * Convert to XML::GrammarBase :
        - lib/XML/Grammar/Fiction/ToHTML.pm
        - lib/XML/Grammar/Fiction/ToDocBook.pm