@@ -1,5 +1,8 @@
 package XML::Grammar::Fiction::FromProto::Node::Paragraph;
 
+use strict;
+use warnings;
+
 our $VERSION = '0.14.7';
 
 use MooX 'late';
