@@ -1,5 +1,8 @@
 package XML::Grammar::Screenplay::ToDocBook;
 
+use strict;
+use warnings;
+
 use MooX 'late';
 
 use XML::GrammarBase::Role::RelaxNG v0.2.2;
